--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="/OlympicLogo/OLYMPIC_WINDOWS_LOGO-removebg-preview.png"
     />
 
+    <!-- css link -->
+    <link rel="stylesheet" href="style.css" />
+
     <!-- BootStrap link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -29,8 +32,13 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- css link -->
-    <link rel="stylesheet" href="/style.css" />
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -43,7 +51,7 @@
         <div class="container-fluid" style="color: white">
           <a class="navbar-brand" href="#"
             ><img
-              src="./navLogo/fuck1.png"
+              src="./navLogo/navLogo.png"
               alt="Company Logo"
               style="width: 200px"
           /></a>
@@ -66,15 +74,12 @@
                   class="nav-link active p-2"
                   style="color: white"
                   aria-current="page"
-                  href="/index.html"
+                  href="index.html"
                   >HOME</a
                 >
               </li>
               <li class="nav-item hoverEffect">
-                <a
-                  class="nav-link p-2"
-                  style="color: white"
-                  href="/aboutUs.html"
+                <a class="nav-link p-2" style="color: white" href="aboutUs.html"
                   >ABOUT US</a
                 >
               </li>
@@ -83,7 +88,7 @@
                 <a
                   class="nav-link p-2"
                   style="color: white"
-                  href="/facility.html"
+                  href="facility.html"
                   >FACILITY</a
                 >
               </li>
@@ -99,21 +104,31 @@
                 >
                 <ul class="dropdown-menu" style="background-color: #e3f2fd">
                   <li>
-                    <a class="dropdown-item dropdownItems" href="#">Action</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item dropdownItems" href="#"
-                      >Another action</a
+                    <a
+                      class="dropdown-item dropdownItems"
+                      href="./Products/product1.html"
+                      >product1</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item dropdownItems" href="#"
-                      >Something else here</a
+                    <a
+                      class="dropdown-item dropdownItems"
+                      href="./Products/product2.html"
+                      >product2</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item dropdownItems" href="#"
-                      >Another action</a
+                    <a
+                      class="dropdown-item dropdownItems"
+                      href="./Products/product3.html"
+                      >product3</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item dropdownItems"
+                      href="./Products/product4.html"
+                      >product4</a
                     >
                   </li>
                 </ul>
@@ -244,13 +259,15 @@
 
     <!-- Content section -->
     <div class="content">
-      <h2 class="heading d-flex justify-content-center">efmkmefwmf</h2>
-      <p class="justify-content-center">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-        praesentium tenetur nisi vel necessitatibus laborum saepe molestiae
-        voluptates, error quod, amet minus dolore laboriosam tempora deserunt?
-        Cupiditate ea doloremque velit?
-      </p>
+      <center>
+        <h2 class="heading d-flex justify-content-center">SOMETHING</h2>
+        <p class="justify-content-center">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
+          praesentium tenetur nisi vel necessitatibus laborum saepe molestiae
+          voluptates, error quod, amet minus dolore laboriosam tempora deserunt?
+          Cupiditate ea doloremque velit?
+        </p>
+      </center>
     </div>
 
     <!-- Card section -->
@@ -259,60 +276,56 @@
         <div class="we_offer_card card">
           <img
             src="./Home/navigator/image2.jpeg"
-            class="card-img we_offer_content"
-            alt="..."
+            class="card-img"
+            alt="product1"
           />
-          <div class="card-img-overlay">
+          <div class="card-img-overlay card-body">
             <a
-              href="#"
+              href="./Products/product1.html"
               class="card-img btn text-light btn-lg stretched-link fs-2"
-              data-bs-toggle="button"
-              >SOMEWHERE</a
+              >product1</a
             >
           </div>
         </div>
         <div class="we_offer_card card">
           <img
             src="./Home/navigator/image2.jpeg"
-            class="card-img we_offer_content"
-            alt="..."
+            class="card-img"
+            alt="product2"
           />
-          <div class="card-img-overlay">
+          <div class="card-img-overlay card-body">
             <a
-              href="#"
+              href="./Products/product2.html"
               class="card-img btn text-light btn-lg stretched-link fs-2"
-              data-bs-toggle="button"
-              >SOMEWHERE</a
+              >product2</a
             >
           </div>
         </div>
         <div class="we_offer_card card">
           <img
             src="./Home/navigator/image2.jpeg"
-            class="card-img we_offer_content"
-            alt="..."
+            class="card-img"
+            alt="product3"
           />
-          <div class="card-img-overlay">
+          <div class="card-img-overlay card-body">
             <a
-              href="#"
+              href="./Products/product3.html"
               class="card-img btn text-light btn-lg stretched-link fs-2"
-              data-bs-toggle="button"
-              >SOMEWHERE</a
+              >product3</a
             >
           </div>
         </div>
         <div class="we_offer_card card">
           <img
             src="./Home/navigator/image2.jpeg"
-            class="card-img we_offer_content"
-            alt="..."
+            class="card-img"
+            alt="product4"
           />
-          <div class="card-img-overlay">
+          <div class="card-img-overlay card-body">
             <a
-              href="#"
+              href="./Products/product4.html"
               class="card-img btn text-light btn-lg stretched-link fs-2"
-              data-bs-toggle="button"
-              >SOMEWHERE</a
+              >product4</a
             >
           </div>
         </div>
@@ -331,7 +344,7 @@
           solutions we have developed over the years.
         </center>
       </h6>
-      <br />
+      <br /><br />
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div
           class="accordion-item border-primary-subtle border-start-0 border-end-0"
@@ -349,7 +362,7 @@
                 class="fa-solid fa-1 fa-beat-fade fa-xl"
                 style="margin-right: 20px"
               ></i>
-              LODHA AMARA
+              CASA RIO
             </button>
           </h2>
           <div
@@ -357,11 +370,7 @@
             class="accordion-collapse collapse show"
           >
             <div class="accordion-body" style="padding: 0; border: none">
-              <img
-                src="./Home/sites/Screenshot 2024-08-12 150937.png"
-                style="width: 100%"
-                alt=""
-              />
+              <img src="./Home/sites/Site_1.png" style="width: 100%" alt="" />
             </div>
           </div>
         </div>
@@ -389,11 +398,7 @@
             class="accordion-collapse collapse"
           >
             <div class="accordion-body" style="padding: 0; border: none">
-              <img
-                src="./Home/sites/Screenshot 2024-08-12 150937.png"
-                style="width: 100%"
-                alt=""
-              />
+              <img src="./Home/sites/Site_2.png" style="width: 100%" alt="" />
             </div>
           </div>
         </div>
@@ -413,7 +418,7 @@
                 class="fa-solid fa-3 fa-beat-fade fa-xl"
                 style="margin-right: 20px"
               ></i>
-              LODHA AMARA
+              LODHA WOODS
             </button>
           </h2>
           <div
@@ -421,11 +426,7 @@
             class="accordion-collapse collapse"
           >
             <div class="accordion-body" style="padding: 0; border: none">
-              <img
-                src="./Home/sites/Screenshot 2024-08-12 150937.png"
-                style="width: 100%"
-                alt=""
-              />
+              <img src="./Home/sites/Site_3.png" style="width: 100%" alt="" />
             </div>
           </div>
         </div>
@@ -445,7 +446,7 @@
                 class="fa-solid fa-4 fa-beat-fade fa-xl"
                 style="margin-right: 20px"
               ></i>
-              LODHA AMARA
+              PALAVA CITY
             </button>
           </h2>
           <div
@@ -453,11 +454,7 @@
             class="accordion-collapse collapse"
           >
             <div class="accordion-body" style="padding: 0; border: none">
-              <img
-                src="./Home/sites/Screenshot 2024-08-12 150937.png"
-                style="width: 100%"
-                alt=""
-              />
+              <img src="./Home/sites/Site_4.png" style="width: 100%" alt="" />
             </div>
           </div>
         </div>
@@ -477,7 +474,7 @@
                 class="fa-solid fa-5 fa-beat-fade fa-xl"
                 style="margin-right: 20px"
               ></i>
-              LODHA AMARA
+              LODHA PREMIER
             </button>
           </h2>
           <div
@@ -485,11 +482,7 @@
             class="accordion-collapse collapse"
           >
             <div class="accordion-body" style="padding: 0; border: none">
-              <img
-                src="./Home/sites/Screenshot 2024-08-12 150937.png"
-                style="width: 100%"
-                alt=""
-              />
+              <img src="./Home/sites/Site_5.png" style="width: 100%" alt="" />
             </div>
           </div>
         </div>
@@ -509,7 +502,7 @@
                 class="fa-solid fa-6 fa-beat-fade fa-xl"
                 style="margin-right: 20px"
               ></i>
-              LODHA AMARA
+              LODHA UPPER THANE
             </button>
           </h2>
           <div
@@ -517,11 +510,7 @@
             class="accordion-collapse collapse"
           >
             <div class="accordion-body" style="padding: 0; border: none">
-              <img
-                src="./Home/sites/Screenshot 2024-08-12 150937.png"
-                style="width: 100%"
-                alt=""
-              />
+              <img src="./Home/sites/Site_6.png" style="width: 100%" alt="" />
             </div>
           </div>
         </div>
@@ -610,8 +599,69 @@
       </div>
     </div>
 
+    <!-- Official people section -->
+    <section>
+      <div class="footer officials">
+        <div>
+          <img
+            src="./Home/navigator/image2.jpeg"
+            style="width: 200px; border-radius: 50%"
+            alt=""
+          />
+        </div>
+        <div>
+          <figure>
+            <blockquote class="blockquote">
+              <p>A well-known quote, contained in a blockquote element.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+              Someone famous in <cite title="Source Title">Source Title</cite>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="footer officials officials_1">
+        <div>
+          <figure class="text-end">
+            <blockquote class="blockquote">
+              <p>A well-known quote, contained in a blockquote element.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+              Someone famous in <cite title="Source Title">Source Title</cite>
+            </figcaption>
+          </figure>
+        </div>
+        <div>
+          <img
+            src="./Home/navigator/image2.jpeg"
+            style="width: 200px; border-radius: 50%"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="footer officials">
+        <div>
+          <img
+            src="./Home/navigator/image2.jpeg"
+            style="width: 200px; border-radius: 50%"
+            alt=""
+          />
+        </div>
+        <div>
+          <figure>
+            <blockquote class="blockquote">
+              <p>A well-known quote, contained in a blockquote element.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+              Someone famous in <cite title="Source Title">Source Title</cite>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
     <!-- women empowerment section -->
-    <div class="card text-bg-light">
+    <div class="card text-dark" style="border: none">
       <img
         src="./Home/Screenshot 2024-08-14 114750.png"
         class="card-img"
@@ -620,9 +670,11 @@
       />
       <div class="card-img-overlay">
         <center>
-          <h5 class="card-title display-4 fw-medium">Women Empowerment</h5>
+          <h5 class="card-title display-4 fw-medium footer womenFont">
+            WOMEN EMPOVERMENT
+          </h5>
 
-          <p class="card-text footer">
+          <p class="card-text footer womenContent">
             We are continuously striving to give equal opportunities to the
             women. We believe that educating and liberating the mothers of this
             society is the way to build the next generation stronger and
@@ -737,43 +789,7 @@
     <!-- SMPT script -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
-    <script>
-      function sendMail() {
-        // Email.send({
-        //   Host: "smtp.elasticemail.com",
-        //   Username: "jay.unofficial002@gmail.com",
-        //   Password: "Temporary###",
-        //   To: "jay.unofficial002@gmail.com",
-        //   From: document.getElementById("email").value,
-        //   Subject: "New Enquiry",
-        //   Body:
-        //     "Name: " +
-        //     document.getElementById("name").value +
-        //     "<br> Email: " +
-        //     document.getElementById("email").value +
-        //     "<br> Phone: " +
-        //     document.getElementById("phone").value +
-        //     "<br> Message: " +
-        //     document.getElementById("message").value,
-        // }).then((message) => alert("Message Sent Succefully"));
-
-        Email.send({
-          SecureToken: "f1c1adbd-1d13-475f-b1d2-bf17c8d20117",
-
-          To: "jay.unofficial002@gmail.com",
-          From: document.getElementById("email").value,
-          Subject: "New Enquiry",
-          Body:
-            "Name: " +
-            document.getElementById("name").value +
-            "<br> Email: " +
-            document.getElementById("email").value +
-            "<br> Phone: " +
-            document.getElementById("phone").value +
-            "<br> Message: " +
-            document.getElementById("message").value,
-        }).then((message) => alert(message));
-      }
-    </script>
+    <!-- contact script -->
+    <script src="/script.js"></script>
   </body>
 </html>
