--- a/Products/product2.html
+++ b/Products/product2.html
@@ -30,8 +30,7 @@
     />
 
     <!-- css link -->
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="aboutUs.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header>
@@ -44,7 +43,7 @@
         <div class="container-fluid" style="color: white">
           <a class="navbar-brand" href="#"
             ><img
-              src="./navLogo/navLogo.png"
+              src="../navLogo/navLogo.png"
               alt="Company Logo"
               style="width: 200px"
           /></a>
@@ -67,12 +66,15 @@
                   class="nav-link active p-2"
                   style="color: white"
                   aria-current="page"
-                  href="index.html"
+                  href="../index.html"
                   >HOME</a
                 >
               </li>
               <li class="nav-item hoverEffect">
-                <a class="nav-link p-2" style="color: white" href="aboutUs.html"
+                <a
+                  class="nav-link p-2"
+                  style="color: white"
+                  href="../aboutUs.html"
                   >ABOUT US</a
                 >
               </li>
@@ -81,7 +83,7 @@
                 <a
                   class="nav-link p-2"
                   style="color: white"
-                  href="facility.html"
+                  href="../facility.html"
                   >FACILITY</a
                 >
               </li>
@@ -99,28 +101,28 @@
                   <li>
                     <a
                       class="dropdown-item dropdownItems"
-                      href="./Products/product1.html"
+                      href="../Products/product1.html"
                       >product1</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item dropdownItems"
-                      href="./Products/product2.html"
+                      href="../Products/product2.html"
                       >product2</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item dropdownItems"
-                      href="./Products/product3.html"
+                      href="../Products/product3.html"
                       >product3</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item dropdownItems"
-                      href="./Products/product4.html"
+                      href="../Products/product4.html"
                       >product4</a
                     >
                   </li>
@@ -145,177 +147,6 @@
         </div>
       </nav>
     </header>
-
-    <!-- Slide -->
-    <div class="card text-bg-light">
-      <img
-        src="./AboutUs/manufacture png01.png"
-        class="card-img"
-        style="opacity: 0.4; max-height: 600px; min-height: 400px"
-        alt="about us"
-      />
-      <div class="card-img-overlay imageContainer">
-        <center>
-          <h1 class="card-title display-4 fw-bold">[ FACILITY ]</h1>
-        </center>
-      </div>
-    </div>
-
-    <!-- Content section -->
-    <section>
-      <div class="footer text-center pt-5">
-        <h5>Our Factory measuring 15000 sq ft incorporating</h5>
-        <h6>
-          We are tech oriented company with all the latest tools and equipment
-          needed to match the standards that the Europeans deliver.
-        </h6>
-        <hr />
-        <br />
-        <div class="card mb-3" style="width: 100%; border: none">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img
-                src="./AboutUs/content/certificate.png"
-                class="img-fluid rounded-start"
-                alt="certificate"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <p class="card-text">
-                  Our staff and employees are trained in such a way that they
-                  deliver the best result without any errors in installation.
-                  Our company is based on the principle, “Every man has its
-                  value”, and hence we value our employees just like family. Our
-                  family consist of 125+ members, all struggling to take our
-                  company to the heights that no one have achieved.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr />
-        <div class="card mb-3" style="width: 100%; border: none">
-          <div class="row g-0">
-            <div class="col-md-8">
-              <div class="card-body">
-                <p class="card-text">
-                  Our manufacturing plant is built in 15000 sq. ft. which
-                  provide us ample of space to develop the required raw
-                  materials, assemble them into frames and shutters to install
-                  them at the work front. Our plant provides us a solution to
-                  all day to day problems faced in our business.
-                </p>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <img
-                src="./AboutUs/content/trophy.png"
-                class="img-fluid rounded-start"
-                alt="certificate"
-                style="max-width: 200px; filter: drop-shadow(1px 1px 10px #000)"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Machinery slide section -->
-    <div class="card text-bg-light">
-      <img
-        src="./AboutUs/manufacture png01.png"
-        class="card-img"
-        style="opacity: 0.4; max-height: 500px; min-height: 400px"
-        alt="..."
-      />
-      <div class="card-img-overlay imageContainer">
-        <center>
-          <h5 class="card-title display-4 fw-bold">[ MACHINERY ]</h5>
-        </center>
-      </div>
-    </div>
-
-    <!-- <center><h1 class="mt-5">MACHINERY</h1></center> -->
-
-    <br />
-    <!-- machines section -->
-    <section class="footer">
-      <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
-        <div class="col">
-          <div class="card">
-            <img
-              src="./AboutUs/machines/machine1.jpg"
-              class="card-img-top"
-              alt="machine1"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="./AboutUs/machines/machine2.jpg"
-              class="card-img-top"
-              alt="machine2"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="./AboutUs/machines/machine3.jpg"
-              class="card-img-top"
-              alt="machine3"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="./AboutUs/machines/machine4.jpg"
-              class="card-img-top"
-              alt="machine4"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="./AboutUs/machines/machine5.jpg"
-              class="card-img-top"
-              alt="machine5"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="./AboutUs/machines/machine6.jpg"
-              class="card-img-top"
-              alt="machine6"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Contact section -->
     <!--Contact Modal -->
